...
                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8px-Qx-gdR">
                                                                    <rect key="frame" x="331" y="18" width="21" height="22"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="hideLayerButton"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="22" id="2Ij-zT-Z9t"/>
                                                                        <constraint firstAttribute="width" constant="21" id="hkh-vw-fgi"/>
                                                                    </constraints>
                                                                    <state key="normal" image="visibleIcon"/>
                                                                    <connections>
                                                                        <action selector="handleVisibilityButtonPressed:" destination="cJq-aW-vw8" eventType="touchUpInside" id="SWI-rn-aKk"/>
                                                                    </connections>
                                                                </button>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7dR-ur-2lS">
                                                                    <rect key="frame" x="307" y="18" width="12" height="22"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="deleteLayerButton"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="22" id="9Ny-Xx-PCC"/>
                                                                        <constraint firstAttribute="width" constant="12" id="9uy-25-3vf"/>
                                                                    </constraints>
                                                                    <state key="normal" image="deleteIcon"/>
                                                                    <connections>
...
